@@ -1,30 +1,10 @@
+% $Id$
 % latex tex4ht-unicode   or   xhlatex tex4ht-unicode "html,3,sections+"
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% tex4ht-unicode.tex                                     %
-% Copyright (C) 1998--            Eitan M. Gurari        %
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is Eitan M. Gurari.                                    %
-%                                                        %
-% If you modify this file your changing the signature    %
-% in \message{(signature)} below will be appreciated.    %
-%                                                        %
-%                             gurari@cse.ohio-state.edu  %
-%                 http://www.cse.ohio-state.edu/~gurari  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
-\message{(<signature>)}
+% Copyright (C) 1998--2009 Eitan M. Gurari
+% Copyright 2009, 2010 TeX Users Group.
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
 
 \ifx \HTML\UnDef
    \def\HTML{unicode} 
@@ -33,6 +13,9 @@
    \def\next{\input mktex4ht.4ht  \endinput}
    \expandafter\next
 \fi
+
+\input{common.tex}
+\input{tex4ht-cpright.tex}
 
 %%%%%%%%%%%%%%%%%% definitions %%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -43,23 +26,6 @@
 \def\ModifyOutputCode{%
    \def\by{}\def\={}%
    \pReModifyOutputCode}
-
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-\edef\version{\the\year-\ifnum \month<10 0\fi
-  \the\month-\ifnum \day<10 0\fi\the\day
-   -\ifnum \temp<10 0\fi \temp
-   :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--\the\year\fi
-}
-
-
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -217,8 +183,6 @@ xmlns="http://www.w3.org/1999/xhtml"
 
 \subsection{TeX Engine}
 
-
-
 The \verb'\trap:base' is to catch empty bases of exponents like, e.g.,
 in \verb'$a^{^b}$'.
 
@@ -272,10 +236,10 @@ of \verb'\mathop', \verb'\mathrel',...., for the next parameter.
 
 
 \<unicode\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% unicode.4ht                           |version %
-% Copyright (C) |CopyYear.1998.       Eitan M. Gurari         %
+% unicode.4ht (|version), generated from |jobname.tex
+% Copyright (C) |CopyYear.1998.       Eitan M. Gurari
 |<TeX4ht copyright|>
+\immediate\write-1{version |version}
 >>>
 
 
@@ -904,43 +868,6 @@ The following originally have been defined to be parameter-less.
 \Configure{ohm}{\leavevmode\ht:special{t4ht@+&{35}x2126;}x}
 \Configure{micro}{\leavevmode\ht:special{t4ht@+&{35}x00B5;}x}
 \Configure{angstrom}{\leavevmode\ht:special{t4ht@+&{35}x212B;}x}
->>>
-
-
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Copy Right}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\<TeX4ht copyright\><<<
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is Eitan M. Gurari.                                    %
-%                                                        %
-% If you modify this program your changing its signature %
-% with a directive of the following form will be         %
-% appreciated.                                           %
-%            \message{signature}                         %
-%                                                        %
-%                             gurari@cse.ohio-state.edu  %
-%                 http://www.cse.ohio-state.edu/~gurari  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\immediate\write-1{version |version}
 >>>
 
 
