@@ -5,7 +5,7 @@
 % Copyright 2000--2009 Eitan M. Gurari
 % Copyright 2009, 2010 TeX Users Group.
 % Released under LPPL 1.3c+.
-% Please see tex4ht-cpright.tex for license text.
+% See tex4ht-cpright.tex for license text.
 
 %%%%%%%%%%%%%%%%%% load style files %%%%%%%%%%%%%%%%%%%%%%%%%%
 
