@@ -11,13 +11,13 @@
 % Copyright 1996--2009 Eitan M. Gurari
 % Copyright 2009, 2010 TeX Users Group.
 % Released under LPPL 1.3c+.
-% Please see tex4ht-cpright.tex for license text.
+% See tex4ht-cpright.tex for license text.
 
 \documentclass{article}
    \usepackage{url}
    \usepackage{verbatim}
    \input{common.tex}
-   % make ` be the escape character, instead of ||
+   % make ` be the escape character, instead of |
    \Configure{ProTex}{java,<<<>>>,title,list,`}
 \begin{document}
 \input tex4ht-cpright.tex
